src/objects/AcctSeed__Billing__c.object
<CustomObject>
    <description>Used to document products or services related sales to a customer.</description>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to specify accounting period for financial reporting.</inlineHelpText>
        <label>Accounting  Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Project_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Year__c</fullName>
        <formula>LEFT(  AcctSeed__Accounting_Period__r.Name  ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to denote the accounting year in which the period was posted.</inlineHelpText>
        <label>Accounting Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Age__c</fullName>
        <formula>IF(AND(TODAY() - AcctSeed__Due_Date2__c &lt;= 0,(ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;0-Current&quot;,
IF(AND(30 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;1-30 Days&quot;,
IF(AND(60 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;31-60 Days&quot;,
IF(AND(90 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;61-90 Days&quot;,
IF(AND(TODAY() - AcctSeed__Due_Date2__c &gt; 90, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;Over 90 Days&quot;,
IF(AND(ROUND(AcctSeed__Balance__c, 2) = 0, TEXT(AcctSeed__Status__c) = &quot;Posted&quot;), &quot;Closed&quot;,
&quot;&quot;))))))</formula>
        <inlineHelpText>Measures the current age of the balance of the billing. Used to monitor collection of balance.</inlineHelpText>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Balance__c</fullName>
        <formula>AcctSeed__Total__c - AcctSeed__Received_Amount__c - AcctSeed__Cash_Application_Adjustment_Amount__c - AcctSeed__Credit_Memo_Applied_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billing Total - received amount - adjustment amount- credit memo applied amount.</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Cash_Receipt_Count__c</fullName>
        <label>Billing Cash Receipt Count</label>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Comment__c</fullName>
        <inlineHelpText>A comment which is included on the pdf invoice generated for the customer.</inlineHelpText>
        <label>Billing Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Main contact for email of billings.</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Cycle_End_Date__c</fullName>
        <inlineHelpText>Used to show end of range in which products or services were delivered.</inlineHelpText>
        <label>Billing Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Cycle_Start_Date__c</fullName>
        <inlineHelpText>Used to show start of range in which products or services were delivered.</inlineHelpText>
        <label>Billing Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to designate the format of the invoice.</inlineHelpText>
        <label>Billing Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Billing</value>
            </filterItems>
            <infoMessage>The type on the PDF Format must be Billing</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Project_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_PostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Terms_Name__c</fullName>
        <inlineHelpText>The name of the billing terms as you would like them to appear on the invoice.</inlineHelpText>
        <label>Billing Terms Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Application_Adjustment_Amount__c</fullName>
        <inlineHelpText>The amount adjusted for payment discount or small balance write off in the process of cash application.</inlineHelpText>
        <label>Cash Application Adjustment Amount</label>
        <summarizedField>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Adjustment_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Closed_Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The accounting period in which the billing reached a zero balance. Used in generating billing aging history records. This field should never be manually updated.</inlineHelpText>
        <label>Closed Accounting  Period</label>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Billings (Closed Accounting  Period)</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_Memo_Applied_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Indicates the amount applied from a single or multiple credit memos.</inlineHelpText>
        <label>Credit Memo Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Conversion_Rate__c</fullName>
        <inlineHelpText>The currency conversion rate for the currency.</inlineHelpText>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The organization you would like to pay you for your product or service.</inlineHelpText>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>contains</operation>
                <value>Customer, Customer and Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Date the Billing is issued to the customer.</inlineHelpText>
        <label>Billing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Amount__c</fullName>
        <formula>AcctSeed__Discount_Percent__c * AcctSeed__Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in the calculation of payment discounts. The discount amount represents the amount of money you will forgive in the cash receipt process if the invoice is paid within the discount days due.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Due_Date__c</fullName>
        <inlineHelpText>The number of days due from the issue date if the customer is to receive a payment discount.</inlineHelpText>
        <label>Discount Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Percent__c</fullName>
        <inlineHelpText>The percent discount rewarded to a customer off the total of the invoice for payment within the discount days due.</inlineHelpText>
        <label>Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Due_Date2__c</fullName>
        <inlineHelpText>The date payment for the billing is due.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger_Amount__c</fullName>
        <formula>IF(ISBLANK(AcctSeed__Currency_Conversion_Rate__c) || AcctSeed__Currency_Conversion_Rate__c = 0,AcctSeed__Total__c,AcctSeed__Total__c/AcctSeed__Currency_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total normalized to the base currency. This is Total divided by the Currency Conversion Rate.</inlineHelpText>
        <label>Ledger Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Line_Count__c</fullName>
        <inlineHelpText>Number of billing lines associated with this record.</inlineHelpText>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__PDF_Email_Status__c</fullName>
        <inlineHelpText>Indicated if the Billing record has been emailed to the billing contact or not.</inlineHelpText>
        <label>PDF Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsent</fullName>
                    <default>true</default>
                    <label>Unsent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__PO_Number__c</fullName>
        <inlineHelpText>Purchase Order Number.</inlineHelpText>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payment_Link__c</fullName>
        <label>Payment Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Proprietary_Billing_Number__c</fullName>
        <inlineHelpText>Used for billing numbering outside of standard Salesforce Autonumber.</inlineHelpText>
        <label>Proprietary Billing Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Received_Amount__c</fullName>
        <inlineHelpText>Indicates the amount of cash applied from a single or multiple cash receipts.</inlineHelpText>
        <label>Received Amount</label>
        <summarizedField>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Applied_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Recurring_Billing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated recurring billing for this record.</inlineHelpText>
        <label>Recurring Billing</label>
        <referenceTo>AcctSeed__Recurring_Billing__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sales_Tax2__c</fullName>
        <description>Total Sales Tax amount</description>
        <inlineHelpText>Total Sales Tax amount</inlineHelpText>
        <label>Sales Tax</label>
        <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Total__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Billing_Line__c.AcctSeed__Tax_Line__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sales_Tax3__c</fullName>
        <description>Summary of the Billing Lines&apos; Tax Amount fields</description>
        <inlineHelpText>Summary of the Billing Lines&apos; Tax Amount fields</inlineHelpText>
        <label>Sales Tax</label>
        <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Tax_Amount2__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Alternate contact who received shipment of goods or services.</inlineHelpText>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billings (Shipping Contact)</relationshipLabel>
        <relationshipName>Billings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_PostalCode__c</fullName>
        <label>Shipping Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>Used in approvals and invoices that are in process of being finalized. A posted status indicates the invoice is final and no further changes are to be made.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Total__c</fullName>
        <formula>AcctSeed__Total__c - AcctSeed__Sales_Tax2__c - AcctSeed__Sales_Tax3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all the Billing Lines&apos; Sub-Total fields</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total__c</fullName>
        <inlineHelpText>Grand Total for Billing.</inlineHelpText>
        <label>Total</label>
        <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Total__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <formula>IF(AcctSeed__Total__c &lt; 0, &apos;Credit Memo&apos;,&apos;Invoice&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A billing can either be an Invoice or Credit memo. An invoice represents money due to your organization. A credit memo represents forgiveness of an Invoice.</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__VAT_Line_Count__c</fullName>
        <inlineHelpText>Count of billing lines that are marked as Is VAT Related = true</inlineHelpText>
        <label>VAT Line Count</label>
        <summaryFilterItems>
            <field>AcctSeed__Billing_Line__c.AcctSeed__Is_VAT_Related__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Billings (Assigned To)</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YayPay_Error_Message__c</fullName>
        <label>YayPay Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YayPay_Last_Sync_Date__c</fullName>
        <label>YayPay Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscoras__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>inscor__Invoice__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <referenceTo>inscor__RMA__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>inscor__Release__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Transaction_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Activity</label>
        <referenceTo>inscor__Activity__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing</label>
    <listViews>
        <fullName>AcctSeed__All1</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Approved</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Credit_Memo</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>AcctSeed__Credit_Memo_Applied_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Credit Memo</value>
        </filters>
        <label>Credit Memos</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__In_Process</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>contains</operation>
            <value>In Process,Waiting for Approval,Rejected</value>
        </filters>
        <label>In Process</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Outstanding_Balance</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__PDF_Email_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Balance__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Outstanding Balance</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__PDF_Email_Sent</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__PDF_Email_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__PDF_Email_Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>PDF Email Sent</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__PDF_Email_Unsent</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__PDF_Email_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__PDF_Email_Status__c</field>
            <operation>equals</operation>
            <value>Unsent</value>
        </filters>
        <label>PDF Email Unsent</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Posted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </filters>
        <label>Posted</label>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>Billings_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Billings Created Today</label>
    </listViews>
    <listViews>
        <fullName>Billings_Only_No_CM</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>notEqual</operation>
            <value>Credit Memo</value>
        </filters>
        <label>Billings Only (No CM)</label>
    </listViews>
    <listViews>
        <fullName>Pentagon_Open_AR</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>startsWith</operation>
            <value>admin</value>
        </filters>
        <filters>
            <field>AcctSeed__Proprietary_Billing_Number__c</field>
            <operation>notContain</operation>
            <value>INV</value>
        </filters>
        <label>Pentagon Open AR</label>
    </listViews>
</CustomObject>